[package]
name = "cli_task_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
serde_derive = "1.0.217"
serial_test = "3.2.0"
crossterm = "0.28.1"
tui = "0.19.0"

[lib]
name = "task_manager"
path = "src/lib.rs"