[package]
name = "cli_task_manager"
version = "0.1.0"
edition = "2021"

[package.metadata]
rust-format-on-save = true

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
serde_derive = "1.0.217"
serial_test = "3.2.0"
crossterm = "0.28.1"
ratatui = { version = "0.29.0", default-features = false, features = ["crossterm"] }

[lib]
name = "task_manager"
path = "src/lib.rs"